force-app/main/default/src/objects/HealthCloudGA__HcFlexibleCarePlanTabs__c/HealthCloudGA__HcFlexibleCarePlanTabs__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Flexible Care Plan Tabs</label>
</CustomObject>