force-app/main/default/src/objects/HealthCloudGA__HcFlexibleCarePlanTabs__c/fields/HealthCloudGA__Component_Name__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__Component_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Component Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>