force-app/main/default/src/objects/HealthCloudGA__HcFlexibleCarePlanTabs__c/fields/HealthCloudGA__SortOrder__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__SortOrder__c</fullName>
    <label>Sort Order</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>