force-app/main/default/src/objects/HealthCloudGA__HcFlexibleCarePlanTabs__c/fields/HealthCloudGA__TabLabel__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__TabLabel__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>If your label has a namespace prefix, use Label_Namespace.Label_Name. Otherwise, use c.Label_Name.</inlineHelpText>
    <label>Tab Label</label>
    <length>100</length>
    <type>Text</type>
</CustomField>